# pelican_ui_std

./: .gitignore  Cargo.toml  README.md
pelican_macro/: Cargo.toml
pelican_macro/src/: lib.rs
src/: .components.rs.swp  .elements.rs.swp  .lib.rs.swp  components.rs  config.rs  elements.rs  events.rs  interface.rs  layout.rs  lib.rs  pages.rs  plugin.rs  prelude.rs  theme.rs  themes.rs  utils.rs
src/components/: .button.rs.swp  abc.rs  alert.rs  amount_display.rs  avatar.rs  bitcoin.rs  bumper.rs  button.rs  card.rs  circle_icon.rs  data_item.rs  display.rs  general.rs  header.rs  icon_button.rs  inputs.rs  list_item.rs  message.rs  messages.rs  mobile_keyboard.rs  mod.rs  native_keyboard.rs  natives.rs  navigation.rs  navigator.rs  numeric_keypad.rs  qr.rs  qr_code.rs  qr_scanner.rs  shapes.rs  text_input.rs
src/components/bitcoin/: amount_display.rs  numeric_keypad.rs  qr_code.rs  qr_scanner.rs
src/components/button/: .button.rs.swp  .icon.rs.swp  button.rs  icon.rs
src/components/common/: alert.rs  avatar.rs  button.rs  card.rs  data_item.rs  list_item.rs  mod.rs  qr_code.rs  qr_scanner.rs  slider.rs  text_input.rs
src/components/common/button/: button.rs  icon.rs
src/components/general/: alert.rs  avatar.rs  button.rs  card.rs  data_item.rs  list_item.rs  text_input.rs
src/components/general/button/: button.rs  icon.rs
src/components/interface/: desktop.rs  general.rs  keyboard.rs  mobile.rs  mod.rs  web.rs
src/components/messages/: credentials.rs  message.rs
src/elements/: .images.rs.swp  .shapes.rs.swp  .text.rs.swp  icon.rs  image.rs  images.rs  mod.rs  shapes.rs  text.rs
src/examples/: component.rs  first_screen.rs
src/interface/: desktop.rs  interface.rs  mobile.rs  mobile_keyboard.rs  navigation.rs
src/theme/: brand.rs  color.rs  colors.rs  fonts.rs  icons.rs
