[package]
name = "pelican_ui"
version = "1.0.6"
authors = ["Ella Mae <ellaammae@email.com>"]
edition = "2021"
description = "A modern UI/UX toolkit optimized for the RAMP stack."
license = "BSD-3-Clause"
repository = "https://github.com/ramp-stack/pelican_ui"
readme = "README.md"
keywords = ["ui", "ux", "ramp", "rust", "component"]
categories = ["gui", "visualization", "rendering"]
documentation = "https://docs.rs/pelican-ui"

[lib]
name = "pelican_ui"
path = "src/lib.rs"

[dependencies]
qrcode = "0.14.1"
uuid = { version = "1.16.0", features = ["v4"] }
dyn-clone = "1.0.19"
rust_on_rails = {path="../rust_on_rails"}
quircs = "0.10.2"
image = "0.25.6"