[package]
name = "pelican_ui_std"
version = "0.2.6"
authors = ["Ella Mae <ellaammae@email.com>"]
edition = "2021"
description = "Standard UI tools and components built off Pelican UI of the RAMP stack."
license = "BSD-3-Clause"
repository = "https://github.com/ramp-stack/pelican_ui_std"
readme = "README.md"
documentation = "https://docs.rs/pelican-ui-std"

[lib]
name = "pelican_ui_std"
path = "src/lib.rs"

[dependencies]
uuid = { version = "1.16.0", features = ["v4", "js"] }
dyn-clone = "1.0.19"
#pelican_ui = "0.1.5"
imageproc = "0.25.0"
qrcode = "0.14.1"
quircs = "0.10.2"
image = "0.25.6"
chrono = "0.4.41"
serde = "1.0.219"
qrc = "0.0.5"
downcast-rs = "2.0.1"
fast_image_resize = "5.1.4"
base64 = "0.22.1"
pelican_ui = "1.1.5"